2006-02-21  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/tclthread.c:
	* tests/ns_thread.test: Add "eval" subcommand to ns_mutex
	etc. which takes a lock, evals the given script, then ensures the
	lock is unlocked before returning. Useful when the script has an
	error.

	* nsd/nsd.h:
	* nsd/server.c:
	* nsd/tclcmds.c:
	* nsd/tclthread.c:
	* tests/ns_thread.test: Thread synchronization commands can now
	take a name rather than a reference and the object will be auto
	created and initialised.

2006-02-20  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/driver.c:
	* nsd/nsd.h:
	* nsd/connio.c: Changed writer to duplicate given memory buffer because
	using Tcl_Obj between threads is not thread-safe. Renamed NSQueueWriter into
	NsWriterQueue to be in the same convention with Tcl API.

2006-02-19  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/getopt.h: Remove unused header.

2006-02-19  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/adpcmds.c:  Replaced references to Ns_DStringTrunc
	* nsd/adpeval.c:  and Tcl_DStringTrunc with Ns_DStringSetLength
	* nsd/adpparse.c: and Tcl_DStringSetLength.
	* nsd/adprequest.c:
	* nsd/connio.c:
	* nsd/driver.c:
	* nsd/dstring.c:
	* nsd/fastpath.c:
	* nsd/form.c:
	* nsd/pathname.c:
	* nsd/request.c:
	* nsd/return.c:
	* nsd/server.c:
	* nsd/tclcallbacks.c:
	* nsd/tclhttp.c:
	* nsd/tclobjv.c:
	* nsd/url2file.c:
	* nsd/urlopen.c:

	* nsd/log.c: Fixed potential freeing of already 
	freed memory during LogFlush/LogFreeCache sequence.

2006-02-18  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/driver.c:
	* nsd/tclcmds.c:
	* nsd/nsd.h: Updated writer support, Tcl command renamed to
	ns_writer with options submit, submitfile, list

2006-02-15  Vlad Seryakov  <seryakov@users.sf.net>

	src/driver.c:
	src/nsd.h: Added maxqueuesize parameter to limit incoming 
	sockets queue size to prevent possible DoS attacks, 
	default size set to 256. 
	include/ns.h: Made struct sockaddr_in sa public in